[package]
name = "echoscp"
version = "0.1.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>", "Paul Knopf <pauldotknopf@gmail.com>"]
description = "An ECHO-SCP server, for testing purposes"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"

[dependencies]
clap = "2.33.0"
quick-error = "1.2.2"
dicom-ul = { path = "../../../ul/", version = "0.1.0" }
dicom-dictionary-std = { path = "../../../dictionary-std/", version = "0.1.0" }